--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,8 @@ body {
 	display: flex;
   	flex-direction: column;
   	height: 100vh;
+  	background-size: cover;
+  	background-position: center;
 }
 p, label, input, button {
 	font-size: 2vmin;
@@ -11,11 +13,14 @@ p, label, input, button {
 a {
 	font-size: 4vmin;
 	text-decoration: none;
-	color: black;
 }
 h1, h2 {
 	font-size: 4vmin;
 	display: flex;
+}
+nav {
+	display: flex;
+	justify-content: flex-end;
 }
 /* DIV GLOBAL */
 #divGlobal {
@@ -28,9 +33,11 @@ footer {
 	text-align: center;
 	margin-top: auto;
 }
+footer p {
+	font-size: 3vmin;
+}
 /* PAGE PERSO */
 header {
-	background-color: red;
 	width: 100%;
 	height: 25vmin;
 	display: flex;
@@ -43,7 +50,12 @@ header {
 	width: 20vmin;
 	border-radius: 50%;
 	margin-left: 5%;
+	background-size: cover;
+	background-position: center;
 }
 #Nom {
 	margin-left: 5%;
+}
+#pPresentation {
+	width: 80%;
 }
